# starkit

./: .gitignore  README.rst  setup.cfg  setup.py
starkit/: conftest.py  version.py
starkit/base/operations/: stellar.py
starkit/evolutionkit/: base.py
starkit/fitkit/jbopt/: base.py
starkit/fitkit/multinest/: base.py
starkit/fitkit/parallel/: ipparallel.py
starkit/gridkit/io/: base.py
starkit/gridkit/io/bosz/: base.py
starkit/gridkit/io/cmfgen/: base.py
starkit/gridkit/io/pollux/: __init__.py  base.py  mk_pollux_cmfgen_meta.py  parse_filename.py  process.py
