[metadata]
name = starkit
description = Collection of tools for working with stellar data
long_description = Collection of tools for working with stellar data
author = Wolfgang Kerzendorf, Tuan Do
author_email = wkerzendorf@gmail.com
license = BSD
url = https://github.com/thorsbro/starkit

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    astropy
    corner
    h5py
    numpy
    pandas
    pymultinest
    scipy
    sqlalchemy
    tables
    tqdm

[options.package_data]
starkit =
    data/*
    **/*.c

[options.extras_require]
grid_io =
    progressbar2
parallel =
    ipyparallel
    psutil
photometry =
    wsynphot
optimizers =
    jbopt
all =
    ipyparallel
    jbopt
    progressbar2
    psutil

[options.packages.find]
include =
    starkit
    starkit.*

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
